fix: header, dark mode, burger manu are up to date and fuly responsible on click

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,162 +3,66 @@
 @use "../components/buttons";
 
 
-
-header {
-    width: 100%;
-}
-.head {
-    max-width: 272px;
-    width: 100%;
-}
-
-.head, .head-bar {
+.header-wrapper{
     @include mixins.flex-center(null);
     flex-direction: row;
     justify-content: space-between;
+    max-width: 272px;
+    width: 100%;
+    padding:0.5rem;
 }
-
-
-
-.light-dark-mode {
-    display: inline-block;
-    width: 24px;
-    height: 24px;
-    background-color: white;
-    border-radius: 8px;
+.header-icons-container {
+    @include mixins.flex-center(1rem);
+    flex-direction: row;
+    justify-content: space-between;
+    input{
+        display: none;
+    }
+}
+.light, .close, .nav {
+    display: none;
+}
+.close, .burger {
+    max-width: 1.5rem;
+    width: 100%;
     cursor: pointer;
-    user-select: none;
-    transition: 0.4s;
-
-    .light-dark-mode:hover {
-        transform: scale(1.03);
-    }
-
-    #check {
-        display: none;
-    }
-
-    .light {
-        width: 0px;
-        position: relative;
-        transform: translateY(-75%);
+}
+.nav-ul{
+    button{
+        width: 100%;
+        padding:15px 20px;
+        background-color: variables.$black;
+        
     }
 }
 
-.nav-button {
-    .nav-click {
-        width: 24px;
-        height: 24px;
+// // N A V :: Checked
 
-        .nav-img {
-            margin: 0 1px;
-            cursor: pointer;
-        }
-
-        .nav-img>div {
-            width: 22px;
-            height: 2.2px;
-            background-color: #3A4C66;
-        }
-
-        .nav-img>div:nth-of-type(2) {
-            margin: 6px 0;
-        }
-
-        .nav-img:hover {
-            transform: scale(1.05);
-        }
+body:has(#nav-check:checked) {  
+    .header-wrapper{
+        align-items: flex-start;
     }
-
-    #nav-check {
-        display: none;
-    }
-}
-
-.nav {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateX(100%);
-    transition: 0.2s;
-}
-
-
-
-// N A V :: Checked
-
-body:has(#nav-check:checked) {
-    main {
-        opacity: 0;
-        visibility: hidden;
-    }
-
     .light-dark-mode {
-        opacity: 0;
-        visibility: hidden;
-        transition: 0s;
+        display: none;
     }
-
-    .nav-img div:nth-child(1) {
-        opacity: 0;
-        visibility: hidden;
+    .close {
+        display: block;
+        width: 1.5rem !important;   
     }
-
-    .nav-img div:nth-child(2) {
-        rotate: calc(45deg);
-        transform: translate(0px, 6px);
+    .burger{
+        display: none;
     }
-
-    .nav-img div:nth-child(3) {
-        rotate: calc(-45deg);
-        transform: translate(0px, -6px);
-    }
-
     .nav {
-        opacity: 1;
-        visibility: visible;
-        width: 320px;
-        height: 800px;
-        font-size: 16px;
-        background-color: white;
-        color: black;
-        border-radius: 15px;
-        margin: 0 auto;
-        transform: translate(-65%, -1%);
+        display: block;
+        width: 100%;
+        height: fit-content;
+        @include mixins.flex-center(1.025rem);
     }
-
     .nav-ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        position: relative;
-        left: 50%;
-        transform: translate(-10%, 15%);
-        position: relative;
+        @include mixins.flex-center(1.5rem);
+        align-items: flex-start;
     }
-
-    .nav-ul li {
-        margin-top: 30px;
-        font-weight: 400;
-    }
-
-    .nav-ul li:nth-child(5) {
-        margin-left: 7px;
-        margin-top: 45px;
-    }
-
-    .nav-ul li:nth-child(6) {
-        width: 153px;
-        height: 54px;
-        background-color: black;
-        color: white;
-        font-weight: 600;
-        border-radius: 8px;
-        text-align: center;
-        line-height: 54px;
-        transform: translateX(-30%);
-    }
-
-    .nav-ul li:nth-child(6):hover {
+    .button:hover {
         background-color: #2E2E2E;
         transition: 0.1s;
         user-select: none;
@@ -168,15 +72,13 @@ body:has(#nav-check:checked) {
 
 body:has(#check:checked) {
     .nav {
-        color: white;
+        color: variables.$white;
         background-color: variables.$secondary-color;
     }
-
     .nav-ul li:nth-child(6) {
-        background-color: white;
-        color: black;
+        background-color: variables.$white;
+        color: variables.$black;
     }
-
     .nav-ul li:nth-child(6):hover {
         transition: 0.2s;
         background-color: rgb(218, 213, 213);
